Version 0.26:
	* QPID-4952: Changed the module name to qpid_messaging.
	* QPID-5140: Added get/set method to MessageProperties.
